[project]
name = "homework-10-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Den Sol",email = "densfmost@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "mypy (>=1.19.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "black (>=26.1.0,<27.0.0)"
]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "flake8-pyproject (>=1.2.4,<2.0.0)"
]

[tool.flake8]
max-line-length = 119
extend-ignore = ["E203"] # Полезно, если используете Black